Updated Boot version from 2.1.2 to 2.6.2 and Java from 8 to 11. Closes #74